codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_all_disabled_guidance_points_to_enable_not_quota_refresh.snap
---
source: cli/src/account_manager_display_tests.rs
assertion_line: 174
expression: "format!(\"English:\\n{}\\nChinese:\\n{}\",\nrender(&inventory, 100, Locale::English),\nrender(&inventory, 100, Locale::SimplifiedChinese),)"
---
English:
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled
3 subscription accounts · 0 ready · 0 checking
Quota percentages show USED allowance; ? means not checked.
Next: Choose an account number, then D to enable it.

     ACCOUNT                    PLAN       AVAILABILITY    PRIMARY  WEEKLY  CREDITS
*  1 Personal                   Pro        Disabled             1%       ?        2
   2 工作席位                   Pro        Disabled           100%       ?        ?
   3 Standby                    Pro        Disabled             9%       ?       10

API accounts · fallback off
Chinese:
Codex 账号管理

当前目标：自动选择订阅账号
订阅账号池：已启用
3 个订阅账号 · 0 个可用 · 0 个正在检查
百分比表示已用额度；? 表示尚未检查。
下一步：输入账号编号，再按 D 启用账号。

     账号                       订阅       状态               短期    长期   重置券
*  1 Personal                   Pro        已停用               1%       ?        2
   2 工作席位                   Pro        已停用             100%       ?        ?
   3 Standby                    Pro        已停用               9%       ?       10

API 账号 · 最终兜底已关闭
