codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_identity_controls_cannot_move_rows_or_hide_numeric_selectors.snap
---
source: cli/src/account_manager_display_tests.rs
assertion_line: 237
expression: output
---
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled
3 subscription accounts · 2 ready · 0 checking
Quota percentages show USED allowance; ? means not checked.
Next: Choose an account number to view quota, credits and actions.

     ACCOUNT                    PLAN       AVAILABILITY    PRIMARY  WEEKLY  CREDITS
*  1 alice @example.com         Pro        Ready                1%       ?        2
   2 Name  Work                 Pro        Cooling down       100%       ?        ?
   3 Standby                    Pro        Ready                9%       ?       10

API accounts · fallback off
