codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_interrupted_reset_chinese.snap
---
source: cli/src/account_manager_display_tests.rs
assertion_line: 86
expression: "render(&inventory, 80, Locale::SimplifiedChinese)"
---
Codex 账号管理

当前目标：自动选择订阅账号
订阅账号池：已启用
3 个订阅账号 · 2 个可用 · 0 个正在检查
J  复核中断的重置操作（自动兑券暂缓）
百分比表示已用额度；? 表示尚未检查。
下一步：输入账号编号，查看额度、重置券和可用操作。

*  1 Personal
     Pro · 可用
     短期   1% · 长期    ?
     重置券 2
   2 工作席位
     Pro · 冷却中
     短期 100% · 长期    ?
     重置券 ?
   3 Standby
     Pro · 可用
     短期   9% · 长期    ?
     重置券 10

API 账号 · 最终兜底已关闭
