codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_interrupted_reset_english.snap
---
source: cli/src/account_manager_display_tests.rs
assertion_line: 85
expression: "render(&inventory, 80, Locale::English)"
---
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled
3 subscription accounts · 2 ready · 0 checking
J  Review interrupted reset operations (automatic credit use paused)
Quota percentages show USED allowance; ? means not checked.
Next: Choose an account number to view quota, credits and actions.

*  1 Personal
     Pro · Ready
     Primary   1% · Weekly    ?
     Reset credits 2
   2 工作席位
     Pro · Cooling down
     Primary 100% · Weekly    ?
     Reset credits ?
   3 Standby
     Pro · Ready
     Primary   9% · Weekly    ?
     Reset credits 10

API accounts · fallback off
