codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_inventory_aligns_numbers_and_unicode_labels.snap
---
source: cli/src/account_manager_display_tests.rs
expression: output
---
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled

     ACCOUNT                    PLAN       AVAILABILITY     PRIMARY  WEEKLY   CREDITS
*  1 Personal                   Pro        ready                1%       ?        2
   2 工作席位                   Pro        coolingDown        100%       ?        ?
   3 Standby                    Pro        ready                9%       ?       10

API accounts · fallback off
