codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_inventory_narrow_cards_wrap_without_losing_actions_or_unknown_quota.snap
---
source: cli/src/account_manager_display_tests.rs
expression: output
---
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled
3 subscription accounts · 2 ready ·
0 checking
Quota percentages show USED allowance; ?
means not checked.
Next: Choose an account number to view
quota, credits and actions.

*  1 Personal
     Pro · Ready
     Primary   1% · Weekly    ?
     Reset credits 2
   2 工作席位
     Pro · Waiting reset
     Primary 100% · Weekly    ?
     Reset credits ?
   3 Standby
     Pro · Ready
     Primary   9% · Weekly    ?
     Reset credits 10

API accounts · fallback off
