codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_language_switch_updates_menu_and_guidance.snap
---
source: cli/src/account_manager_display_tests.rs
expression: output
---
Codex Accounts

Target: Automatic subscriptions
Subscription pool: Enabled
3 subscription accounts · 2 ready · 0 checking
Quota percentages show USED allowance; ? means not checked.
Next: Choose an account number to view quota, credits and actions.

     ACCOUNT                    PLAN       AVAILABILITY     PRIMARY  WEEKLY   CREDITS
*  1 Personal                   Pro        Ready                1%       ?        2
   2 工作席位                   Pro        Waiting reset      100%       ?        ?
   3 Standby                    Pro        Ready                9%       ?       10

API accounts · fallback off

[R] Refresh  [A] Add  [S] Settings  [P] API accounts  [O] Automatic subscriptions
[C] Cancel login  [number] Account actions  [G] Language  [Q] Quit

Codex 账号管理

当前目标：自动选择订阅账号
订阅账号池：已启用
3 个订阅账号 · 2 个可用 · 0 个正在检查
百分比表示已用额度；? 表示尚未检查。
下一步：输入账号编号，查看额度、重置券和可用操作。

     账号                       订阅       状态               短期    长期   重置券
*  1 Personal                   Pro        可用                 1%       ?        2
   2 工作席位                   Pro        等待额度重置       100%       ?        ?
   3 Standby                    Pro        可用                 9%       ?       10

API 账号 · 最终兜底已关闭

[R] 刷新额度  [A] 添加账号  [S] 设置  [P] API 账号  [O] 自动选择订阅
[C] 取消登录  [编号] 账号操作  [G] 语言 / Language  [Q] 退出
