codex-rs/cli/src/snapshots/codex__account_manager_tui__display__tests__manager_manual_api_has_no_active_subscription_marker.snap
---
source: cli/src/account_manager_display_tests.rs
assertion_line: 108
expression: output
---
Codex Accounts

Target: API target unavailable
Subscription pool: Enabled
3 subscription accounts · 2 ready · 0 checking
Quota percentages show USED allowance; ? means not checked.
Next: O returns to automatic subscriptions. API requests are provider billed.

     ACCOUNT                    PLAN       AVAILABILITY    PRIMARY  WEEKLY  CREDITS
   1 Personal                   Pro        Ready                1%       ?        2
   2 工作席位                   Pro        Cooling down       100%       ?        ?
   3 Standby                    Pro        Ready                9%       ?       10

API accounts · fallback off
